--- a/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
+++ b/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
@@ -9,7 +9,8 @@
 
 <body>
 
-    <script src="js/Datosprimitivos.js"></script>
+    <!-- <script src="js/Datosprimitivos.js"></script> -->
+    <script src="js/palabras-reservadas.js"></script>
 
 </body>
 
