--- a/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
+++ b/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
@@ -10,7 +10,8 @@
 <body>
 
     <!-- <script src="js/Datosprimitivos.js"></script> -->
-    <script src="js/palabras-reservadas.js"></script>
+    <!-- <script src="js/palabras-reservadas.js"></script> -->
+    <script src="js/arreglos.js"></script>
 
 </body>
 
