23. Más detalles sobre los arreglos

--- a/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
+++ b/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,8 @@
 
     <!-- <script src="js/Datosprimitivos.js"></script> -->
     <!-- <script src="js/palabras-reservadas.js"></script> -->
-    <script src="js/arreglos.js"></script>
+    <!-- <script src="js/arreglos.js"></script> -->
+    <script src="js/arreglos2.js"></script>
 
 </body>
 
