--- a/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
+++ b/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
@@ -12,7 +12,9 @@
     <!-- <script src="js/Datosprimitivos.js"></script> -->
     <!-- <script src="js/palabras-reservadas.js"></script> -->
     <!-- <script src="js/arreglos.js"></script> -->
-    <script src="js/arreglos2.js"></script>
+    <!-- <script src="js/arreglos2.js"></script> -->
+    <script src="js/objeto-literal.js"></script>
+
 
 </body>
 
