--- a/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
+++ b/Sección 3 Fundamentos de JavaScript, primitivos, arreglos, objetos y funciones básicas/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="js/palabras-reservadas.js"></script> -->
     <!-- <script src="js/arreglos.js"></script> -->
     <!-- <script src="js/arreglos2.js"></script> -->
-    <script src="js/objeto-literal.js"></script>
+    <!-- <script src="js/objeto-literal.js"></script> -->
+    <script src="js/funciones.js"></script>
 
 
 </body>
