--- a/Sección 4 Ciclos y estructuras de control de flujo/index.html
+++ b/Sección 4 Ciclos y estructuras de control de flujo/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <script src="js/valor-referencia.js"></script>
+    <!-- <script src="js/valor-referencia.js"></script> -->
+    <script src="js/if-else.js"></script>
 </body>
 
 </html>
