34. Laboratorio - Alternativa al if else

--- a/Sección 4 Ciclos y estructuras de control de flujo/index.html
+++ b/Sección 4 Ciclos y estructuras de control de flujo/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <!-- <script src="js/valor-referencia.js"></script> -->
-    <script src="js/if-else.js"></script>
+    <!-- <script src="js/if-else.js"></script> -->
+    <script src="js/Laboratorio-if-else.js"></script>
+
 </body>
 
 </html>
