--- a/Sección 4 Ciclos y estructuras de control de flujo/index.html
+++ b/Sección 4 Ciclos y estructuras de control de flujo/index.html
@@ -10,7 +10,9 @@
 <body>
     <!-- <script src="js/valor-referencia.js"></script> -->
     <!-- <script src="js/if-else.js"></script> -->
-    <script src="js/Laboratorio-if-else.js"></script>
+    <!-- <script src="js/Laboratorio-if-else.js"></script> -->
+    <script src="js/logica-booleana.js"></script>
+
 
 </body>
 
