37. Operador condicional ternario

--- a/Sección 4 Ciclos y estructuras de control de flujo/index.html
+++ b/Sección 4 Ciclos y estructuras de control de flujo/index.html
@@ -11,7 +11,9 @@
     <!-- <script src="js/valor-referencia.js"></script> -->
     <!-- <script src="js/if-else.js"></script> -->
     <!-- <script src="js/Laboratorio-if-else.js"></script> -->
-    <script src="js/logica-booleana.js"></script>
+    <!-- <script src="js/logica-booleana.js"></script> -->
+    <script src="js/operador-ternario.js"></script>
+
 
 
 </body>
