--- a/Sección 4 Ciclos y estructuras de control de flujo/index.html
+++ b/Sección 4 Ciclos y estructuras de control de flujo/index.html
@@ -12,7 +12,8 @@
     <!-- <script src="js/if-else.js"></script> -->
     <!-- <script src="js/Laboratorio-if-else.js"></script> -->
     <!-- <script src="js/logica-booleana.js"></script> -->
-    <script src="js/operador-ternario.js"></script>
+    <!-- <script src="js/operador-ternario.js"></script> -->
+    <script src="js/protip-ternario.js"></script>
 
 
 
