--- a/Sección 4 Ciclos y estructuras de control de flujo/index.html
+++ b/Sección 4 Ciclos y estructuras de control de flujo/index.html
@@ -14,8 +14,8 @@
     <!-- <script src="js/logica-booleana.js"></script> -->
     <!-- <script src="js/operador-ternario.js"></script> -->
     <!-- <script src="js/protip-ternario.js"></script> -->
-    <script src="js/switch.js"></script>
-
+    <!-- <script src="js/switch.js"></script> -->
+    <script src="js/while-do-while.js"></script>
 
 
 </body>
