41. For - For in - For of

--- a/Sección 4 Ciclos y estructuras de control de flujo/index.html
+++ b/Sección 4 Ciclos y estructuras de control de flujo/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="js/operador-ternario.js"></script> -->
     <!-- <script src="js/protip-ternario.js"></script> -->
     <!-- <script src="js/switch.js"></script> -->
-    <script src="js/while-do-while.js"></script>
+    <!-- <script src="js/while-do-while.js"></script> -->
+    <script src="js/cicloFor.js"></script>
 
 
 </body>
