--- a/Seccion 5 Laboratorio 1/index.htm
+++ b/Seccion 5 Laboratorio 1/index.htm
@@ -6,9 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackjack</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
+    <header class="titulo">
+        <h1>Blackjack</h1>
+    </header>
+    <div class="row">
+        <div class="col text-center pt-2">
+            <button class="btn btn-danger">Nuevo juego</button>
+            <button class="btn btn-primary">Pedir carta</button>
+            <button class="btn btn-primary">Detener</button>
+        </div>
+    </div>
+    <div>
+        <div class="col">
+            <h1>Jugador 1 - <small>0</small> </h1>
+            <div id="jugador-cartas">
+                <img class="carta" src="assets/cartas/10C.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <div class="col pt-2">
+            <h1>Computadora - <small>0</small> </h1>
+            <div id="computadora-cartas">
+                <img class="carta" src="assets/cartas/3C.png" alt="">
+            </div>
+        </div>
+    </div>
 
 
     <script src="assets/js/juego.js"></script>
