--- a/Seccion 5 Laboratorio 1/index.html
+++ b/Seccion 5 Laboratorio 1/index.html
@@ -38,8 +38,9 @@
         </div>
     </div>
 
-
+    <script src="assets/js/underscore-min.js"></script>
     <script src="assets/js/juego.js"></script>
+
 </body>
 
 </html>
