--- a/Seccion 5 Laboratorio 1/index.html
+++ b/Seccion 5 Laboratorio 1/index.html
@@ -15,9 +15,9 @@
     </header>
     <div class="row">
         <div class="col text-center pt-2">
-            <button class="btn btn-danger">Nuevo juego</button>
-            <button class="btn btn-primary">Pedir carta</button>
-            <button class="btn btn-primary">Detener</button>
+            <button id="btnNuevo" class="btn btn-danger">Nuevo juego</button>
+            <button id="btnPedir" class="btn btn-primary">Pedir carta</button>
+            <button id="btnDetener" class="btn btn-primary">Detener</button>
         </div>
     </div>
     <div>
