--- a/Seccion 5 Laboratorio 1/index.html
+++ b/Seccion 5 Laboratorio 1/index.html
@@ -23,7 +23,7 @@
     <div>
         <div class="col">
             <h1>Jugador 1 - <small>0</small> </h1>
-            <div id="jugador-cartas">
+            <div id="jugador-cartas" class="divCartas">
                 <!-- <img class="carta" src="assets/cartas/10C.png" alt=""> -->
             </div>
         </div>
@@ -32,7 +32,7 @@
     <div>
         <div class="col pt-2">
             <h1>Computadora - <small>0</small> </h1>
-            <div id="computadora-cartas">
+            <div id="computadora-cartas" class="divCartas">
                 <!-- <img class="carta" src="assets/cartas/3C.png" alt=""> -->
             </div>
         </div>
