64. Optimizaciones - Tercera parte 66. Código fuente del juego de Blackjack

--- a/Seccion 5 Laboratorio 1/index.html
+++ b/Seccion 5 Laboratorio 1/index.html
@@ -16,8 +16,8 @@
     <div class="row">
         <div class="col text-center pt-2">
             <button id="btnNuevo" class="btn btn-danger">Nuevo juego</button>
-            <button id="btnPedir" class="btn btn-primary">Pedir carta</button>
-            <button id="btnDetener" class="btn btn-primary">Detener</button>
+            <button id="btnPedir" disabled="disabled" class="btn btn-primary">Pedir carta</button>
+            <button id="btnDetener" disabled="disabled" class="btn btn-primary">Detener</button>
         </div>
     </div>
     <div>
@@ -40,6 +40,15 @@
 
     <script src="assets/js/underscore-min.js"></script>
     <script src="assets/js/juego.js"></script>
+
+    <script>
+        console.log({
+            miModulo
+        });
+        document.querySelector('#btnNuevo').addEventListener('click', () => {
+            miModulo.nuevoJuego();
+        });
+    </script>
 
 </body>
 
