--- a/Seccion 5 Laboratorio 1/index.html
+++ b/Seccion 5 Laboratorio 1/index.html
@@ -39,7 +39,8 @@
     </div>
 
     <script src="assets/js/underscore-min.js"></script>
-    <script src="assets/js/juego.js"></script>
+    <!-- <script src="assets/js/juego.js"></script> -->
+    <script src="assets/js/juegos-min.js"></script>
 
     <script>
         console.log({
