71. Clases básicas en JavaScript

--- a/Sección 7 Clases en JavaScript y ESNext private properties/index.html
+++ b/Sección 7 Clases en JavaScript y ESNext private properties/index.html
@@ -18,7 +18,8 @@
     </p>
 
 
-    <script src="assets/js/classes/problema.js"></script>
+    <!-- <script src="assets/js/classes/problema.js"></script> -->
+    <script src="assets/js/classes/class.js"></script>
 
 </body>
 
