--- a/Sección 7 Clases en JavaScript y ESNext private properties/index.html
+++ b/Sección 7 Clases en JavaScript y ESNext private properties/index.html
@@ -19,7 +19,8 @@
 
 
     <!-- <script src="assets/js/classes/problema.js"></script> -->
-    <script src="assets/js/classes/class.js"></script>
+    <!-- <script src="assets/js/classes/class.js"></script> -->
+    <script src="assets/js/classes/sub-classes.js"></script>
 
 </body>
 
