78. Protip: Multiples constructores

--- a/Sección 7 Clases en JavaScript y ESNext private properties/index.html
+++ b/Sección 7 Clases en JavaScript y ESNext private properties/index.html
@@ -22,7 +22,8 @@
     <!-- <script src="assets/js/classes/class.js"></script> -->
     <!-- <script src="assets/js/classes/sub-classes.js"></script> -->
     <!-- <script src="assets/js/classes/esnext.js"></script> -->
-    <script src="assets/js/classes/singleto.js"></script>
+    <!-- <script src="assets/js/classes/singleto.js"></script> -->
+    <script src="assets/js/classes/constuctores-multiples.js"></script>
 </body>
 
 </html>
