--- a/Sección 8 Módulos y Webpack/webpack-inicial/src/index.html
+++ b/Sección 8 Módulos y Webpack/webpack-inicial/src/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Hola</h1>
+    <img src="./assets/brand.jpeg" alt="">
     <script src="/webpack-inicial/src/js/index.js"></script>
 
 </body>
