137. Petición HTTP - Fetch - Get

--- a/Seccion 12 peticiones http y subida de archivos/src/index.html
+++ b/Seccion 12 peticiones http y subida de archivos/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,6 @@
 
 <body>
 
-    <h1>Prueba</h1>
 
 
 </body>
